= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/dsconv
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.3.0\...HEAD[Unreleased]

=== Changed

* Include the commit hash and the committer date of Git in output of `--version`, if available
* Print detailed help information in `--help`

== {compare-url}/v0.2.0\...v0.3.0[0.3.0] - 2021-11-10

=== Added

* Add `--color` for colored output

=== Changed

* Change to display `--generate-completion`

== {compare-url}/v0.1.1\...v0.2.0[0.2.0] - 2021-11-02

=== Added

* Add GFM version README for crates.io
* Add continuous deployment by GitHub Actions

=== Changed

* Change the edition to the Rust 2021 Edition

=== Fixed

* Fix the MSRV to 1.53.0

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2021-09-11

=== Added

* Use the CI to check if the usage section of README is up-to-date

=== Changed

* Update README related to crates.io (see {pull-request-url}/3[#3])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2021-09-10

=== Added

* Initial release