@@ -16,6 +16,8 @@ categories = ["command-line-utilities"]
 anyhow = "1.0.45"
 atty = "0.2.14"
 bat = { version = "0.18.3", default-features = false }
+clap = { version = "3.0.5", features = ["cargo", "derive"] }
+clap_complete = "3.0.2"
 deser-hjson = "1.0.2"
 dialoguer = { version = "0.9.0", default-features = false }
 directories = "4.0.1"
@@ -29,7 +31,6 @@ serde = { version = "1.0.130", features = ["derive"] }
 serde_cbor = "0.11.2"
 serde_json = { version = "1.0.69", features = ["preserve_order"] }
 serde_yaml = "0.8.21"
-structopt = "0.3.25"
 strum = { version = "0.22.0", features = ["derive"] }
 toml = { version = "0.5.8", features = ["preserve_order"] }
 
